# projetoBase_Fargate_Python

./: .gitignore  README.md  buildspec.yml  docker-compose.yml  start.sh  stop.sh
docker/: Dockerfile
infrastructure/: codepipeline.tf  iam.tf  loadbalancer.tf  main.tf  output.tf  variables.tf
infrastructure/assets/: containerDefinitions.json
infrastructure/iam/: CodeBuildPolicy.json  SecretsManagerPolicy.json
src/: logger.py  newrelic.ini  pushECR2AWS.sh  pyproject.toml  setup.cfg
src/api/: app.py
src/api/consolida_carrefour/: __init__.py  app.py  errors.py  middlewares.py  queue.py  repository.py  tools.py  util.py
src/api/consolida_pagamento/: __init__.py  app.py  repository.py  tools.py  util.py
src/testes/: teste_docker.py  teste_host.py  teste_randon.py
